# cosmere-rpg

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
src/cosmere_rpg/: __init__.py  attribute.py  main.py
tests/: test_basic.py
